--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       .layout {
         display: flex;
-        gap: 20px; /* space between form and preview */
+        gap: 20px;
         margin: 40px 0;
       }
 
@@ -275,6 +275,7 @@
         <hr />
 
         <h2>Search Similar Images</h2>
+        
         <label for="queryImage">Upload Query Image:</label>
         <input type="file" id="queryImage" accept="image/*" />
 
@@ -305,7 +306,7 @@
         />
 
         <div id="searchResults">
-          <h4>Similar Images</h4>
+          <h3>Similar Images</h4>
           <div id="resultImages"></div>
         </div>
       </div>
@@ -415,7 +416,7 @@
 
           const formData = new FormData();
           formData.append("file", fileInput.files[0]);
-          formData.append("num_results", 9); // changed to 9
+          formData.append("num_results", 9);
           formData.append("download_ids", false);
           if (thresholdInput) {
             formData.append("distance_threshold", thresholdInput);
@@ -437,7 +438,6 @@
               return;
             }
 
-            // If user requested JSON download, trigger it
             if (saveJson) {
               const jsonBlob = new Blob([JSON.stringify(data, null, 2)], {
                 type: "application/json",
@@ -451,7 +451,6 @@
               status.innerText = "Results downloaded as JSON.";
             }
 
-            // Render results visually
             data.results.forEach((item) => {
               const imgContainer = document.createElement("div");
               const img = document.createElement("img");
