--- a/gui.html
+++ b/gui.html
@@ -275,7 +275,7 @@
         <label for="queryImage">Upload Query Image:</label>
         <input type="file" id="queryImage" accept="image/*" />
 
-        <label for="threshold">Distance Threshold (optional):</label>
+        <label for="threshold">Distance Threshold (optional, default to 2000) :</label>
         <input
           type="number"
           id="threshold"
@@ -283,7 +283,7 @@
           step="0.01"
         />
 
-        <label for="topK">Top-K Results to Search (optional):</label>
+        <label for="topK">Top-K Results to Search (optional, default to 500):</label>
         <input
           type="number"
           id="topK"
